@@ -3,6 +3,7 @@ Changelog
 
 ### 1.3.2
 * __Plugin Mode__
+* Adds option to output JSON string of PyMOL helper classes
 * Refactored code for PyMOL visualization
 
 ### 1.3.1
